# bibtex2mbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/bibtex2mbox/: cli.py  converter.py
